tests/paczka1/small_fuzzy/55216138.err
Error in line 2: 2AqiGbqDQHL A362 15,5
Error in line 5: HgXcZvxXJsF A244 70,8
Error in line 10: iZFgPXgwnQW A362 24,0
Error in line 7: Gllb3 A509 32,2
Error in line 6: 2AqiGbqDQHL A244 87,0
